[package]
name = "d64make"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.2"
binread = "2.2.0"
binwrite = "0.2.1"
bitflags = "2.3.2"
bytemuck = { version = "1.13.1", features = ["extern_crate_alloc"] }
clap = { version = "4.3.3", features = ["derive"] }
ghakuf = { git = "https://github.com/9nova/ghakuf" }
glob-match = "0.2.1"
hex-literal = "0.4.1"
indexmap = "1.9.3"
itertools = "0.11.0"
lodepng = { git = "https://github.com/9nova/lodepng-rust" }
log = "0.4.19"
nom = "7.1.3"
phf = { version = "0.11.2", features = ["macros"] }
pretty_env_logger = "0.5.0"
rgb = "0.8.36"
sha2 = "0.10.7"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[lib]

[[bin]]
name = "d64make"

[profile.release]
#lto = true
